# polaris-api

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 04441d5bcea8_app_profile_ingestion_enabled.py  29f9f9fdc8f1_add_ambiguity_score_to_classification.py  80a52cdcc2eb_phase2_intelligence_models.py  bb06ee99b747_init_voc_schema.py
app/: main.py
app/api/v1/: api.py
app/core/: config.py  security.py
app/db/: base.py  session.py  uuid_base.py
app/models/: __init__.py  app_benchmark.py  app_profile.py  audit.py  classification.py  company.py  insight.py  kb.py  policy.py  reply.py  report.py  review.py  review_cluster.py  token.py  user.py
app/schemas/: __init__.py  app_benchmark.py  app_profile.py  audit.py  auth.py  classification.py  common.py  company.py  dashboard.py  insight.py  kb.py  policy.py  queue.py  reply.py  report.py  review.py  review_cluster.py
app/services/: analysis_service.py  auth_service.py  benchmark_service.py  cluster_service.py  insight_service.py  mock_ingestion.py  normalization.py  registry.py  report_service.py
app/services/audit/: __init__.py  logger.py
app/services/classification/: __init__.py  base.py  llm.py  scoring.py  stub.py
app/services/generation/: __init__.py  base.py  default.py  llm.py  templates.py
app/services/ingestion/: __init__.py  app_store.py  base.py  google_play.py  scheduler.py  synthetic.py
app/services/kb/: __init__.py  base.py  keyword.py
scripts/: issue_dev_token.py  seed.py  seed_kb.py  seed_phase2.py
(+25 files in other folders)
