[project]
name = "polaris-api"
version = "0.1.0"
description = "Polaris — AI-based VOC (app review) auto-classification and reply-generation API"
authors = [{ name = "thewoowon", email = "thewoowon@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standard] (>=0.32.1,<0.33.0)",
    "pydantic (>=2.9,<3.0)",
    "pydantic-settings (>=2.6.1,<3.0.0)",
    "email-validator (>=2.2,<3.0)",
    "sqlalchemy[asyncio] (>=2.0.36,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg[binary] (>=3.2,<4.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.1.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.0,<2.0)",
    "openai (>=1.54,<2.0)",
    "pyyaml (>=6.0,<7.0)",
    "google-play-scraper (>=1.2,<2.0)",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
ruff = "^0.7"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
